examples/errors/undefined_struct/main.hd
fn main(): int {
    let p = Ghost { x: 1, y: 2 };
    return 0;
}
